--- a/lab07/notebooks/outlier_detection.ipynb
+++ b/lab07/notebooks/outlier_detection.ipynb
@@ -508,8 +508,18 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.imshow(x_perturbed.reshape(28, 28, 1))\n",
-    "plt.axis('off')\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(8, 4))\n",
+    "\n",
+    "# Plot original x\n",
+    "axes[0].imshow(x.reshape(28, 28), cmap='gray')\n",
+    "axes[0].axis('off')\n",
+    "axes[0].set_title('Original x')\n",
+    "\n",
+    "# Plot perturbed x\n",
+    "axes[1].imshow(x_perturbed.reshape(28, 28), cmap='gray')\n",
+    "axes[1].axis('off')\n",
+    "axes[1].set_title('Perturbed x')\n",
+    "\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
