--- a/lab06/notebooks/albumentations.ipynb
+++ b/lab06/notebooks/albumentations.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "## Augmentation at scale\n",
     "\n",
-    "When working with large amounts of data, probably want to persist the augmentations and don't to them on the fly, every time you use the dataset.\n",
+    "When working with large amounts of data, you'll want to persist the augmentations and not compute them on the fly, every time you use the dataset.\n",
     "In the last section on Albumentations, we will combine augmentation with what we have learnt about data versioning in the previous part.\n",
     "\n",
     "Below you find a simple python script to run Albumentations from the command line."
@@ -166,10 +166,10 @@
     "\n",
     "def main(args):\n",
     "    augmentation = getattr(A, args.augmentation)(**args.augmentation_params)\n",
-    "    \n",
+    "\n",
     "    if not os.path.exists(args.save_dir):\n",
     "        os.makedirs(args.save_dir)\n",
-    "    \n",
+    "\n",
     "    for filename in os.listdir(args.input_dir):\n",
     "        if filename.endswith('.jpg') or filename.endswith('.png'):\n",
     "            image_path = os.path.join(args.input_dir, filename)\n",
@@ -185,12 +185,12 @@
     "                        help=\"Name of the augmentation class.\")\n",
     "    parser.add_argument(\"--augmentation_params\", type=str, nargs='*', default=[],\n",
     "                        help=\"Parameters for the augmentation in the format key1=value1 key2=value2 ...\")\n",
-    "    \n",
+    "\n",
     "    args = parser.parse_args()\n",
-    "    \n",
+    "\n",
     "    args.augmentation_params = dict(item.split('=') for item in args.augmentation_params)\n",
     "    args.augmentation_params = {key: float(value) for key, value in args.augmentation_params.items()}\n",
-    "    \n",
+    "\n",
     "    main(args)\n"
    ]
   },
