--- a/lab07/notebooks/adversarial_attack_detection.ipynb
+++ b/lab07/notebooks/adversarial_attack_detection.ipynb
@@ -291,13 +291,11 @@
     "            )\n",
     "\n",
     "        # TODO: Compute output probabilities for x, i.e. M(x)\n",
-    "        probabilities = F.log_softmax(clf(x.view(-1, 1, 28, 28)))\n",
     "\n",
     "        # TODO: Compute output probabilities for reconstructed x, i.e. M(AE(x))\n",
-    "        probabilities_recon = F.log_softmax(clf(recon_x.view(-1, 1, 28, 28)))\n",
     "        \n",
     "        # TODO: Compute loss term here.\n",
-    "        loss = F.kl_div(probabilities, probabilities_recon, reduction='batchmean', log_target=True)\n",
+    "        loss = torch.tensor(0.0)\n",
     "\n",
     "        return VAE.VAEOutput(\n",
     "            z_dist=dist,\n",
@@ -541,7 +539,7 @@
    "outputs": [],
    "source": [
     "# TODO: Compute the accuracy of the classifier on the adversarial examples\n",
-    "accuracy_adv = 1 - success.to(torch.float32).mean(axis=-1)"
+    "accuracy_adv = 0.0"
    ]
   },
   {
@@ -559,9 +557,8 @@
    "source": [
     "# TODO: Pass the adversarial examples through the VAE\n",
     "# Hint: Use `clipped_advs`\n",
-    "advs = clipped_advs.view(raw_advs.size(0), -1)\n",
-    "advs = advs.to(device)\n",
-    "advs_recon = vae(advs, compute_loss=False).x_recon"
+    "advs = torch.tensor([])\n",
+    "advs_reconstructed = torch.tensor([])"
    ]
   },
   {
@@ -578,12 +575,7 @@
    "outputs": [],
    "source": [
     "# TODO: Pass the reconstructed examples through the classifier and compute the accuracy\n",
-    "# Hint: Use `advs_recon`\n",
-    "advs_recon = advs_recon.view(-1, 1, 28, 28)\n",
-    "advs_recon = advs_recon.to(device)\n",
-    "outputs = clf(advs_recon)\n",
-    "_, predicted = torch.max(outputs.data, 1)\n",
-    "accuracy_recon = (predicted == labels).sum().item() / len(labels)"
+    "# Hint: Use `advs_reconstructed`"
    ]
   },
   {
@@ -601,7 +593,7 @@
    "source": [
     "# TODO: Print the accuracy of the classifier on the adversarial examples and the reconstructed examples\n",
     "print(f'Accuracy on adversarial examples: {accuracy_adv:.4f}')\n",
-    "print(f'Accuracy on reconstructed examples: {accuracy_recon:.4f}')"
+    "print(f'Accuracy on reconstructed examples: {advs_reconstructed:.4f}')"
    ]
   },
   {
@@ -614,7 +606,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mlops-lab-07",
    "language": "python",
    "name": "python3"
   },
@@ -628,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
