--- a/lab01/lab01a_02_autograd_tutorial.ipynb
+++ b/lab01/lab01a_02_autograd_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -55,14 +55,12 @@
     "For this example, we load a pretrained resnet18 model from ``torchvision``.\n",
     "We create a random data tensor to represent a single image with 3 channels, and height & width of 64,\n",
     "and its corresponding ``label`` initialized to some random values. Label in pretrained models has\n",
-    "shape (1,1000).\n",
-    "\n",
-    "<div class=\"alert alert-info\"><h4>Note</h4><p>This tutorial works only on the CPU and will not work on GPU devices (even if tensors are moved to CUDA).</p></div>\n"
+    "shape (1,1000)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -79,6 +77,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: move everything to GPU\n",
+    "print(f\"Current model location: {next(model.parameters()).device}\")\n",
+    "print(f\"Current data location: {data.device}\")\n",
+    "print(f\"Current labels location: {labels.device}\")\n",
+    "\n",
+    "model.to(\"cuda\")\n",
+    "data = data.to(\"cuda\")\n",
+    "labels = labels.to(\"cuda\")\n",
+    "\n",
+    "print(f\"New model location: {next(model.parameters()).device}\")\n",
+    "print(f\"New data location: {data.device}\")\n",
+    "print(f\"New labels location: {labels.device}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -90,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -99,7 +117,11 @@
    },
    "outputs": [],
    "source": [
-    "prediction = model(data) # forward pass"
+    "prediction = model(data)\n",
+    "# We expect the prediction to be on the same device as the model and the input:\n",
+    "print(f\"Prediction location: {prediction.device}\")\n",
+    "# and we expect the prediction to have the same shape as the labels\n",
+    "print(f\"Prediction shape: {prediction.shape}\")"
    ]
   },
   {
@@ -116,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -141,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -164,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -208,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -235,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -276,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -459,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -490,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -513,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
