--- a/lab01/lab01a_02_autograd_tutorial.ipynb
+++ b/lab01/lab01a_02_autograd_tutorial.ipynb
@@ -195,7 +195,7 @@
    },
    "outputs": [],
    "source": [
-    "optim.step() #gradient descent"
+    "optim.step() # gradient descent"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "source": [
     "Let's assume ``a`` and ``b`` to be parameters of an NN, and ``Q``\n",
     "to be the error. In NN training, we want gradients of the error\n",
-    "w.r.t. parameters, i.e.\n",
+    "with respect to parameters, i.e.\n",
     "\n",
     "\\begin{align}\\frac{\\partial Q}{\\partial a} = 9a^2\\end{align}\n",
     "\n",
@@ -287,7 +287,7 @@
     "\n",
     "We need to explicitly pass a ``gradient`` argument in ``Q.backward()`` because it is a vector.\n",
     "``gradient`` is a tensor of the same shape as ``Q``, and it represents the\n",
-    "gradient of Q w.r.t. itself, i.e.\n",
+    "gradient of Q with respect to itself, i.e.\n",
     "\n",
     "\\begin{align}\\frac{dQ}{dQ} = 1\\end{align}\n",
     "\n",
@@ -402,7 +402,7 @@
     "Conceptually, autograd keeps a record of data (tensors) & all executed\n",
     "operations (along with the resulting new tensors) in a directed acyclic\n",
     "graph (DAG) consisting of\n",
-    "[Function](https://pytorch.org/docs/stable/autograd.html#torch.autograd.Function)_\n",
+    "[Function](https://pytorch.org/docs/stable/autograd.html#torch.autograd.Function)\n",
     "objects. In this DAG, leaves are the input tensors, roots are the output\n",
     "tensors. By tracing this graph from roots to leaves, you can\n",
     "automatically compute the gradients using the chain rule.\n",
@@ -413,8 +413,9 @@
     "- maintain the operation’s *gradient function* in the DAG.\n",
     "\n",
     "The backward pass kicks off when ``.backward()`` is called on the DAG\n",
-    "root. ``autograd`` then:\n",
+    "root.\n",
     "\n",
+    "``autograd`` then:\n",
     "- computes the gradients from each ``.grad_fn``,\n",
     "- accumulates them in the respective tensor’s ``.grad`` attribute, and\n",
     "- using the chain rule, propagates all the way to the leaf tensors.\n",
@@ -557,7 +558,7 @@
     "are the weights and bias of the classifier.\n",
     "\n",
     "The same exclusionary functionality is available as a context manager in\n",
-    "[torch.no_grad()](https://pytorch.org/docs/stable/generated/torch.no_grad.html)_\n",
+    "[torch.no_grad()](https://pytorch.org/docs/stable/generated/torch.no_grad.html)\n",
     "\n",
     "\n"
    ]
@@ -577,9 +578,9 @@
    "source": [
     "## Further readings:\n",
     "\n",
-    "-  [In-place operations & Multithreaded Autograd](https://pytorch.org/docs/stable/notes/autograd.html)_\n",
-    "-  [Example implementation of reverse-mode autodiff](https://colab.research.google.com/drive/1VpeE6UvEPRz9HmsHh1KS0XxXjYu533EC)_\n",
-    "-  [Video: PyTorch Autograd Explained - In-depth Tutorial](https://www.youtube.com/watch?v=MswxJw-8PvE)_\n",
+    "-  [In-place operations & Multithreaded Autograd](https://pytorch.org/docs/stable/notes/autograd.html)\n",
+    "-  [Example implementation of reverse-mode autodiff](https://colab.research.google.com/drive/1VpeE6UvEPRz9HmsHh1KS0XxXjYu533EC)\n",
+    "-  [Video: PyTorch Autograd Explained - In-depth Tutorial](https://www.youtube.com/watch?v=MswxJw-8PvE)\n",
     "\n"
    ]
   }
