--- a/lab03/mlflow_tracking.ipynb
+++ b/lab03/mlflow_tracking.ipynb
@@ -95,7 +95,8 @@
    "outputs": [],
    "source": [
     "experiments = client.search_experiments()\n",
-    "experiments"
+    "print(f\"found {len(experiments)} experiment(s)\")\n",
+    "print(f\"Experiment name: {experiments[0].name}\")"
    ]
   },
   {
