--- a/lab06/notebooks/synthetic_data.ipynb
+++ b/lab06/notebooks/synthetic_data.ipynb
@@ -58,7 +58,7 @@
         "# You can ignore this, it's just to make the type checker happy.\n",
         "DatasetType = Union[DatasetDict, Dataset, IterableDatasetDict, IterableDataset]\n",
         "\n",
-        "dataset: DatasetType  = load_dataset(\"Matthijs/snacks\")"
+        "dataset: DatasetType  = load_dataset(\"Matthijs/snacks\",trust_remote_code=True)"
       ]
     },
     {
@@ -209,10 +209,10 @@
         "# pipe.to(\"mps\")\n",
         "\n",
         "# Use this if you have an NVIDIA GPU:\n",
-        "pipe = pipe.to(\"cuda\")\n",
+        "# pipe = pipe.to(\"cuda\")\n",
         "\n",
         "# Else, use this:\n",
-        "# pipe = pipe.to(\"cpu\")\n",
+        "pipe = pipe.to(\"cpu\")\n",
         "\n",
         "# Compilation accelerates inference. The first inference run will be very slow though!\n",
         "# Comment this line out if you are using a Mac.\n",
@@ -705,7 +705,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.11"
+      "version": "3.11.14"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
