--- a/lab01/lab01a_01_tensor_tutorial.ipynb
+++ b/lab01/lab01a_01_tensor_tutorial.ipynb
@@ -526,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lab01",
    "language": "python",
    "name": "python3"
   },
