--- a/lab01/lab01a_02_autograd_tutorial.ipynb
+++ b/lab01/lab01a_02_autograd_tutorial.ipynb
@@ -590,7 +590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lab01",
    "language": "python",
    "name": "python3"
   },
