--- a/lab01/lab01a_03_neural_networks_tutorial.ipynb
+++ b/lab01/lab01a_03_neural_networks_tutorial.ipynb
@@ -369,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lab01",
    "language": "python",
    "name": "python3"
   },
