--- a/lab01/lab01a_04_cifar10_tutorial.ipynb
+++ b/lab01/lab01a_04_cifar10_tutorial.ipynb
@@ -579,7 +579,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lab01",
    "language": "python",
    "name": "python3"
   },
