--- a/lab01/lab01c.ipynb
+++ b/lab01/lab01c.ipynb
@@ -120,12 +120,12 @@
     "d = embedded.shape[1]\n",
     "\n",
     "# Exercise: Set the dimensions of the query, key and value vectors\n",
-    "d_q, d_k, d_v = ..., ..., ...\n",
+    "d_q, d_k, d_v = 24, 24, 30\n",
     "\n",
     "W_q = torch.nn.Parameter(torch.rand(d_q, d))\n",
     "# Exercise: Create the key and value weight matrices\n",
-    "W_k = ...\n",
-    "W_v = ..."
+    "W_k = torch.nn.Parameter(torch.rand(d_k, d))\n",
+    "W_v = torch.nn.Parameter(torch.rand(d_v, d))"
    ]
   },
   {
@@ -493,7 +493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lab01",
    "language": "python",
    "name": "python3"
   },
